--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "ethers": "^5.6.5",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
