--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,8 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "strictNullChecks": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.jsx", "styles/theme/lightThemeOptions.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.jsx", "styles/theme/lightThemeOptions.ts", "pages/_app.tsx"],
   "exclude": ["node_modules"]
 }
