--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.1",
