--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@reduxjs/toolkit": "^1.8.1",
     "ethers": "^5.6.5",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-typed": "^1.2.0",
     "reactjs-popup": "^2.0.5"
   },
