--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@ramonak/react-progress-bar": "^4.4.0",
     "@reduxjs/toolkit": "^1.8.1",
     "ethers": "^5.6.5",
     "next": "^12.1.6",
